--- a/serverless.yml
+++ b/serverless.yml
@@ -20,6 +20,16 @@ functions:
       - http:
           path: dictionary
           method: get
+          # authorizer: # An AWS API Gateway custom authorizer function
+            # name: authorizerFunc # The name of the authorizer function (must be in this service)
+            # arn: xxx:xxx:Lambda-Name # Can be used instead of name to reference a function outside of service
+            # resultTtlInSeconds: 0
+            # identitySource: method.request.header.Authorization
+            # identityValidationExpression: someRegex
+            # type: token #
       - http:
           path: dictionary
           method: post
+      - http:
+          path: dictionary
+          method: put
